<resources>
    <string name="app_name">MobileEDispoNew</string>
    <string name="surat_undangan_menu">Surat Undangan</string>
    <string name="button_menu">button_menu</string>
    <string name="surat_umum_text">Surat Umum</string>
    <string name="mobile_e_dispo">Mobile E-Dispo</string>
    <string name="kegiatan_luar">Kegiatan Luar</string>
    <string name="agenda_hari_ini">Agenda Hari ini</string>
    <string name="user_photo">user_photo</string>
    <string name="empty">…</string>
    <string name="bidang">Bidang :</string>
    <string name="seksi">Seksi :</string>
    <string name="hadir">Hadir :</string>
    <string name="staff">Staff :</string>
    <string name="share">Share</string>
    <string name="detail">Detail</string>
    <string name="kegiatan_external_bidang">Kegiatan External Bidang</string>
    <string name="cari_tanggal_kegiatan">Cari Tanggal Kegiatan</string>
    <string name="tidak_ada_kegiatan">Tidak Ada Kegiatan</string>
    <string name="kegiatan_internal_bidang">Kegiatan Internal Bidang</string>
    <string name="cari_tanggal_agenda_pppk">Cari Tanggal Agenda PPPK</string>
    <string name="tidak_ada_agenda_pppk">Tidak Ada Agenda PPPK</string>
    <string name="cari_tanggal_agenda_kegiatan">Cari Tanggal Agenda Kegiatan</string>
    <string name="tidak_ada_agenda">Tidak Ada Agenda</string>
    <string name="cari_agenda">Cari Agenda</string>
    <string name="title_activity_detail_surat">DetailSuratActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="detail_surat">Detail Surat</string>
    <string name="no_surat">No Surat :</string>
    <string name="no_agenda">No Agenda :</string>
    <string name="perihal">Perihal :</string>
    <string name="dari">Dari :</string>
    <string name="file_surat">File Surat :</string>
    <string name="disposisi_balik">Disposisi Balik</string>
    <string name="terima_surat">Terima Surat</string>
    <string name="disposisi">Disposisi</string>
    <string name="ket_dispo_balik">Ket dispo balik :</string>
    <string name="keterangan">Keterangan :</string>
    <string name="isi">Isi :</string>
    <string name="disposisi_surat">Disposisi Surat</string>
    <string name="lihat_file_surat">Lihat File Surat</string>
    <string name="masuk">Masuk</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_surat_main">SuratMainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tidak_ada_surat">Tidak Ada Surat</string>
    <string name="cari_tanggal_dispo_surat">Cari Tanggal Dispo Surat</string>
    <string name="simpan_foto">Simpan Foto</string>
    <string name="username">Username</string>
    <string name="data_checkup_kesehatan_n_menggunakan_mesin_anjungan_kesehatan_mandiri">Data Checkup Kesehatan \n (Menggunakan Mesin Anjungan Kesehatan Mandiri)</string>
    <string name="kg">KG</string>
    <string name="riwayat">Riwayat</string>
    <string name="tinggi_nbadan">Tinggi \nBadan</string>
    <string name="cm">CM</string>
    <string name="hasil_ntensi">Hasil \nTensi</string>
    <string name="mmhg">mmHg</string>
    <string name="klik_disini_untuk_informasi_bmi">Klik Disini Untuk Informasi BMI</string>
    <string name="logout">Logout</string>
    <string name="nomor_induk_kependudukan">Nomor Induk Kependudukan</string>
    <string name="jabatan">Jabatan</string>
    <string name="telepon">Telepon</string>
    <string name="tanggal_lahir">Tanggal lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="klik_disini_untuk_scan_akm">Klik Disini Untuk Scan AKM</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="silahkan_scan_qr_code_yang_ada_di_aplikasi_akm_untuk_menggunakan_mesin_akm">Silahkan Scan QR Code yang ada di aplikasi AKM untuk menggunakan mesin AKM</string>
    <string name="pelaksana">Pelaksana :</string>
    <string name="penanggung_jawab">Penanggung jawab :</string>
    <string name="ket">Ket :</string>
    <string name="hubungi_penanggung_jawab_via">Hubungi penanggung jawab via :</string>
    <string name="sms">SMS</string>
    <string name="tgl_check">tgl_check</string>
    <string name="asal">Asal :</string>
    <string name="nama">nama</string>
    <string name="password">Password</string>
    <string name="checkup">checkup</string>
    <string name="hasil_check">Hasil Check</string>
    <string name="nilai">nilai</string>
    <string name="kegiatan_pppk">Kegiatan PPPK</string>
    <string name="kosong">kosong</string>
    <string name="agenda_pppk">Agenda PPPK</string>
    <string name="detail_agenda">Detail Agenda</string>
    <string name="lokasi">lokasi</string>
    <string name="jam">jam</string>
    <string name="nomor_telepon_yang_dapat_dihubungi">Nomor telepon yang dapat dihubungi</string>
    <string name="tidak_ada_kontak">Tidak Ada Kontak</string>
    <string name="tidak_ada_file_surat">Tidak Ada File Surat</string>
    <string name="surat">surat</string>
    <string name="upload_notulen">Upload Notulen</string>
    <string name="logo">logo</string>
    <string name="silakan_cari_agenda">Silakan Cari Agenda</string>
    <string name="menu_disposisi">Menu Disposisi</string>
    <string name="tujuan_disposisi">Tujuan Disposisi</string>
    <string name="isi_disposisi">Isi Disposisi</string>
    <string name="kirim_disposisi">Kirim Disposisi</string>
    <string name="menu_disposisi_balik">Menu Disposisi Balik</string>
    <string name="alasan_disposisi_balik">Alasan disposisi balik</string>
    <string name="mobile_e_disposisi">Mobile E-Disposisi</string>
    <string name="kirim_disposisi_balik">Kirim Disposisi Balik</string>
    <string name="berhasil">Berhasil</string>
    <string name="tidak_ada_notulen">Tidak ada Notulen</string>
    <string name="notulen">Notulen</string>
    <string name="lihat_notulen">Lihat Notulen</string>
</resources>