<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="horizontal"
    android:focusable="true"
    android:id="@+id/layout_artikel"
    android:padding="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_transparant"
        android:padding="1dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:layout_margin="5dp"
            android:contentDescription="@string/checkup"
            android:src="@drawable/ic_checkup"
            android:padding="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/image"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/txt_tgl_checkup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl_check"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/roboto_medium" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hasil_check"
                android:textSize="15sp"
                android:textColor="#BB370D"
                android:fontFamily="@font/roboto_light" />

            <TextView
                android:id="@+id/txt_nilai_checkup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nilai"
                android:textSize="15sp"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/roboto_bold"
                android:textStyle="bold"/>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
